--- a/index.html
+++ b/index.html
@@ -18,6 +18,10 @@
     padding-left: 150px;
     padding-right: 150px;
     }
+    .heading {
+     width: 80%;
+     margin: 0 auto;
+    }
     #img4 {
      width: 7%;
      height: 7%;
@@ -31,6 +35,7 @@
       font-size: 225%;
       padding-bottom:1cm;
       padding-top:1cm;
+      display: inline-block;
     }
     h3 {
       color:#545454;
@@ -104,7 +109,7 @@
 
   
 
-    <div>
+    <div class = "heading">
       <img src="https://ctra0024.github.io/FIT3179/img4.png" id="img4" alt="car crash image">
       <h1 id="heading1"> Fatal Traffic Accidents Between 2014 And 2019</h1>
       <img src="https://ctra0024.github.io/FIT3179/img4.png" id="img4" alt="car crash image">
