--- a/index.html
+++ b/index.html
@@ -22,7 +22,13 @@
      width: 80%;
      margin: 0 auto;
     }
-    #img4 {
+    #img4left {
+     width: 7%;
+     height: 7%;
+     padding-top: 20px;
+     display: inline-block;
+    }
+    #img4right {
      width: 7%;
      height: 7%;
      padding-top: 20px;
@@ -110,9 +116,9 @@
   
 
     <div class = "heading">
-      <img src="https://ctra0024.github.io/FIT3179/img4.png" id="img4" alt="car crash image">
+      <img src="https://ctra0024.github.io/FIT3179/img4.png" id="img4left" alt="car crash image">
       <h1 id="heading1"> Fatal Traffic Accidents Between 2014 And 2019</h1>
-      <img src="https://ctra0024.github.io/FIT3179/img4.png" id="img4" alt="car crash image">
+      <img src="https://ctra0024.github.io/FIT3179/img4.png" id="img4right" alt="car crash image">
     </div>
   
   <div class = "text">
