--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
   
   <script type="text/javascript">
     var spec1 = "https://ctra0024.github.io/FIT3179/overview.json";
-    vegaEmbed('#vis1', spec1).then(function(result) {
+    vegaEmbed('#vis1', spec1, {"actions": false}).then(function(result) {
       // Access the Vega view instance (https://vega.github.io/vega/docs/api/view/) as result.view
     }).catch(console.error);
     
