--- a/index.html
+++ b/index.html
@@ -109,9 +109,9 @@
   
 
     <div class = "heading">
-      <img src="https://ctra0024.github.io/FIT3179/img4.png" id="img4left" alt="car crash image">
+      <img src="https://ctra0024.github.io/FIT3179/images/img4.png" id="img4left" alt="car crash image">
       <h1 id="heading1"> Fatal Traffic Accidents Between 2014 And 2019</h1>
-      <img src="https://ctra0024.github.io/FIT3179/img4.png" id="img4right" alt="car crash image">
+      <img src="https://ctra0024.github.io/FIT3179/images/img4.png" id="img4right" alt="car crash image">
     </div>
   
   <div class = "text">
