--- a/index.html
+++ b/index.html
@@ -50,8 +50,8 @@
       padding-top:25px;
     }
     .vis-container{
-      width: 100%;
-      margin: 0 auto;
+      margin: auto;
+      width: 60%;
     }
     .text {
       margin-top: 15px;
