--- a/index.html
+++ b/index.html
@@ -65,6 +65,7 @@
       border-width: 5px;
       border-color: #961111;
       background-color: white;
+      width: 100%;
     }
     .mainkeyword {
       color: #961111;
