--- a/index.html
+++ b/index.html
@@ -48,6 +48,7 @@
       font-family: arial;
       font-size: 190%;
       padding-top:25px;
+      width: 100%;
     }
     .vis-container{
       margin: auto;
@@ -70,6 +71,7 @@
     .mainkeyword {
       color: #961111;
       font-weight: bold;
+      width: 100%;
     }
     .keyword {
       font-weight: bold;
