--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
      display: inline-block;
     }
     h1 {
-      color:#242424;
+      color:#f0f8ff;
       text-align: center;
       font-family: arial;
       font-size: 225%;
@@ -44,7 +44,7 @@
       display: inline-block;
     }
     h3 {
-      color:#545454;
+      color:#f0f8ff;
       font-family: arial;
       font-size: 190%;
       padding-top:25px;
