--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <!-- custom style -->
   <style>
     body {
-    background-color: #f2f2f2;
+    background-color: #211f1f;
     padding-left: 150px;
     padding-right: 150px;
     }
