--- a/index.html
+++ b/index.html
@@ -69,12 +69,15 @@
       width: 100%;
     }
     .mainkeyword {
-      color: #591528;
+      color: #961111;
       font-weight: bold;
       width: 100%;
     }
     .keyword {
       font-weight: bold;
+    }
+    a {
+     color: #961111 
     }
 
   </style>
