--- a/index.html
+++ b/index.html
@@ -50,9 +50,21 @@
       padding-top:25px;
       width: 100%;
     }
-    .vis-container{
+    .vis-container1{
       margin: auto;
-      width: 50%;
+      width: 97%;
+    }
+    .vis-container2{
+      margin: auto;
+      width: 75%;
+    }
+    .vis-container3{
+      margin: auto;
+      width: 65%;
+    }
+    .vis-container4{
+      margin: auto;
+      width: 75%;
     }
     .text {
       margin-top: 15px;
@@ -65,7 +77,7 @@
       border-left-style: solid;
       border-width: 5px;
       border-color: #961111;
-      background-color: white;
+      background-color: whitesmoke;
       width: 100%;
     }
     .mainkeyword {
@@ -104,9 +116,10 @@
     of Fatal Traffic Accidents
   </h3>
   
-  <div>
+  <div class="vis-container1">
     <div id="vis1"></div>
   </div>
+    
   <div class = "text">
       <p>There was an overall decrease in the number of fatal traffic accidents from 2014 to 2019, however the number of fatal traffic accidents by gender </p>
   </div>
@@ -116,7 +129,7 @@
     by Victim Road User Types
   </h3>
   
-  <div class="vis-container">
+  <div class="vis-container2">
     <div id="vis2"></div>
   </div>
   
@@ -125,7 +138,7 @@
     of Fatal Traffic Accidents by Gender
   </h3>
   
-  <div class="vis-container">
+  <div class="vis-container3">
     <div id="vis3"></div>
   </div>
   
@@ -134,7 +147,7 @@
     % Contribution to Total Fatal Traffic Accidents
   </h3>
   
-  <div class="vis-container">
+  <div class="vis-container4">
     <div id="vis4"></div>
   </div>
   
