--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <!-- custom style -->
   <style>
     body {
-    background-color: #211f1f;
+    background-color: #f2f2f2;
     padding-left: 150px;
     padding-right: 150px;
     }
@@ -35,7 +35,7 @@
      display: inline-block;
     }
     h1 {
-      color:#f0f8ff;
+      color:#211f1f;
       text-align: center;
       font-family: arial;
       font-size: 225%;
@@ -44,7 +44,7 @@
       display: inline-block;
     }
     h3 {
-      color:#f0f8ff;
+      color:#211f1f;
       font-family: arial;
       font-size: 190%;
       padding-top:25px;
@@ -60,7 +60,7 @@
     }
     .vis-container3{
       margin: auto;
-      width: 65%;
+      width: 76%;
     }
     .vis-container4{
       margin: auto;
@@ -77,7 +77,7 @@
       border-left-style: solid;
       border-width: 5px;
       border-color: #961111;
-      background-color: whitesmoke;
+      background-color: white;
       width: 100%;
     }
     .mainkeyword {
@@ -97,9 +97,9 @@
 <body>
 
     <div class = "heading">
-      <img src="https://ctra0024.github.io/FIT3179/images/grey-img4.png" id="img4left" alt="car crash image">
+      <img src="https://ctra0024.github.io/FIT3179/images/img4.png" id="img4left" alt="car crash image">
       <h1 id="heading1"> Fatal Traffic Accidents Between 2014 And 2019</h1>
-      <img src="https://ctra0024.github.io/FIT3179/images/grey-img4.png" id="img4right" alt="car crash image">
+      <img src="https://ctra0024.github.io/FIT3179/images/img4.png" id="img4right" alt="car crash image">
     </div>
   
   <div class = "text">
