--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     padding-right: 150px;
     }
     .heading {
-     width: 80%;
+     width: 90%;
      margin: 0 auto;
     }
     #img4left {
@@ -38,15 +38,14 @@
       color:#211f1f;
       text-align: center;
       font-family: arial;
-      font-size: 225%;
-      padding-bottom:1cm;
+      font-size: 250%;
       padding-top:1cm;
       display: inline-block;
     }
     h3 {
       color:#211f1f;
       font-family: arial;
-      font-size: 190%;
+      font-size: 180%;
       padding-top:25px;
       width: 100%;
     }
@@ -65,9 +64,10 @@
     .vis-container4{
       margin: auto;
       width: 75%;
+      padding-bottom: 50px;
     }
     .text {
-      margin-top: 15px;
+      margin-top: 35px;
       padding: 5px;
       padding-left: 10px;
       padding-right: 10px;
