--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
   </div>
     
   <div class = "text">
-      <p>There was an overall decrease in the number of fatal traffic accidents from 2014 to 2019, however the number of fatal traffic accidents by gender </p>
+      <p>TEXT PLACEHOLDER</p>
   </div>
   
   <h3>
